@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2015,v 1.1887 2015/04/21 22:21:00 markd Exp $
+$NetBSD: CHANGES-2015,v 1.1888 2015/04/21 22:40:45 markd Exp $
 
 Changes to the packages collection and infrastructure in 2015:
 
@@ -2657,3 +2657,6 @@ Changes to the packages collection and infrastructure in 2015:
 	Added print/tex-dashbox version 1.14 [markd 2015-04-21]
 	Added print/tex-lkproof version 3.1 [markd 2015-04-21]
 	Added print/tex-lkproof-doc version 3.1 [markd 2015-04-21]
+	Added print/tex-adjustbox-doc version 1.0 [markd 2015-04-21]
+	Added print/tex-collectbox-doc version 0.4b [markd 2015-04-21]
+	Added print/tex-ydoc-doc version 0.6alpha [markd 2015-04-21]
